Hides the fact we need extra memory for sbt in run.sh :)